Added a nice log alias on git

--- a/gitconfig.erb
+++ b/gitconfig.erb
@@ -3,6 +3,7 @@
 	email = <%= print("Your Email: "); STDOUT.flush; STDIN.gets.chomp %>
 [alias]
 	co = checkout
+  lg = log --pretty=oneline --all --graph --abbrev-commit --decorate
 [color]
 	diff = auto
 	status = auto
